--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
+    "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
