--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "reatjs-basics",
+  "name": "reactjs-basics",
   "version": "1.0.0",
-  "description": "Some Basic ReactJS",
-  "main": "index.js",
+  "description": "reactjs examples",
+  "main": "main.js",
+  "dependencies": {
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "jquery": "^3.1.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
+  },
+  "devDependencies": {},
   "scripts": {
-    "start": "npm run build",
-    "build": "webpack -d && cp src/index.html dist/index.html && webpack-dev-server --content-base src/ --inline --hot --port 5050",
-    "build:prod": "webpack -p && cp src/index.html dist/index.html"
+    "start": "webpack-dev-server --hot"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hikuley/reactjs-basics.git"
   },
   "keywords": [
     "reactjs"
   ],
   "author": "hikuley",
   "license": "MIT",
-  "dependencies": {
-    "jquery": "^3.1.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+  "bugs": {
+    "url": "https://github.com/hikuley/reactjs-basics/issues"
   },
-  "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
-  }
+  "homepage": "https://github.com/hikuley/reactjs-basics#readme"
 }
