--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "start": "npm run build",
+    "build": "webpack -d && cp src/index.html dist/index.html && webpack-dev-server --content-base src/ --inline --hot",
+    "build:prod": "webpack -p && cp src/index.html dist/index.html"
   },
   "repository": {
     "type": "git",
