--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 .gitignore
 .idea/
-reactjs-basics.iml
-/node_modules/
-/dist/
-dist/
 node_modules/
+package.json
+reactjs-basics.iml
