--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "babel-preset-stage-2": "^6.22.0",
     "jquery": "^3.1.1",
     "react": "^15.4.2",
-    "react-data-binding": "^0.4.1",
     "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+  },
   "scripts": {
     "start": "npm run build",
     "build": "webpack -d && xcopy \"src/index.html\" \"dist/\" /F /Y && webpack-dev-server --content-base src/ --inline",
