--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "uglify-js-plugin": "0.0.6",
+    "webpack-uglify-js-plugin": "^1.1.9"
+  },
   "scripts": {
     "start": "npm run build",
     "build": "webpack -d && xcopy \"src/index.html\" \"dist/\" /F /Y && webpack-dev-server --content-base src/ --inline",
